--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,3 +4,11 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3";
+@import "compass/utilities";
+@import "compass/typography";
+$base-font-size 16px
+$base-line-height 24px
+$relative-font-sizing true
+$font-unit if($relative-font-sizing, 1em, $base-font-size)
+@import "compass/typography/vertical_rhythm";
